# mbdyn-adapter

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
example/: hronturek.py  mbdyn-config  membrane.msh
example/cavity/: Allarchive  Allclean  Allrun  clean.sh  plot-displacement.py  precice-config.xml
example/cavity/Fluid/: run.sh
example/cavity/Fluid/0.orig/: U  p  pointDisplacement
example/cavity/Fluid/constant/: dynamicMeshDict  transportProperties  turbulenceProperties
example/cavity/Fluid/initBCs/: U  p  pointDisplacement
example/cavity/Fluid/system/: blockMeshDict  controlDict  decomposeParDict  fvSchemes  fvSolution  preciceDict
example/cavity/Solid/: mbdyn-config  membrane.mbd  membrane.msh  plotDisplacement.py  predyn.py  previous_work  run.sh
example/tools/: run-mbdyn.sh  run-openfoam.sh
legacy/: setup.py
legacy/mbdynAdapter/: __init__.py  adapter.py  helper.py
legacy/tutorials/cavityFSI/: Allrun  precice-config.xml
legacy/tutorials/cavityFSI/structure/: cavityFSI.py
mbdynAdapter/: __init__.py  adapter.py  helper.py  input.py  prep.py  tools.py
src/mbdynadapter/: adapter.py  helper.py  input.py  prep.py
src/mbdynprecice/: _tools.py  adapter.py  helper.py  prep.py
tutorials/cavityFSI/: Allclean  Allrun  precice-config.xml
tutorials/cavityFSI/fluid/: precice-adapter-config.yml
tutorials/cavityFSI/fluid/0/: U  p
tutorials/cavityFSI/fluid/constant/: couplingProperties  dynamicMeshDict  fsi.yaml  preCICE.xml
tutorials/cavityFSI/structure/: cavityFSI.py  membrane.geo  membrane.msh  preCICE.xml
(+27 files in other folders)
