[metadata]
name = mbdyn-adapter
version = 0.0.2
author = Mikko Folkersma, Hagen Leipprand
author_email = hagen.leipprand@gmail.com
description = preCICE adapter for MBDyn
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3
url = https://github.com/precice/mbdyn-adapter
project_urls =
    Bug Tracker = https://github.com/precice/mbdyn-adapter/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Scientific/Engineering


[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy >= 1.19.4
    scipy
    pyprecice
    meshio >= 4.3.5
    beautifulsoup4
    lxml
python_requires = >=3.6

[options.packages.find]
where = src